--- a/index.html
+++ b/index.html
@@ -193,28 +193,28 @@
         <h1>Things I Enjoy Doing<br><br></h1>        
     </div>
     <div class="fav1">
-        <img class="icon1" height="200px" width="200px" src="image/android-logo-transparent-background.png" />
+        <img class="icon1" height="200px" width="200px" src="android-logo-transparent-background.png" />
         <div class="title">
             <h2>Android</h2>
             <span class="text">I enjoy customizing Android theme and looking to finally learn how to do it from scratch</span>
         </div>
     </div>
     <div class="fav2">
-        <img class="icon2" height="200px" width="200px" src="image/Coderstrust.jpg" />
+        <img class="icon2" height="200px" width="200px" src="Coderstrust.jpg" />
         <div class="title">
             <h2>CodersTrust</h2>
             <span class="text">This is my way to <a href="#">Learn & Earn</a> to become a successful web designer</span>
         </div>
     </div>
     <div class="fav3">
-        <img class="icon3" height="200px" width="200px" src="image/web.png" />
+        <img class="icon3" height="200px" width="200px" src="web.png" />
         <div class="title">
             <h2>Web Design</h2>
             <span class="text">I love looking at design made by professional. It makes me wonder how to create a stunning design like them. By creating and learning how to code. I can finally say that I am on my way there.</span>
         </div>
     </div>
     <div class="fav4">
-        <img class="icon4" height="200px" width="200px "src="image/game.png" />
+        <img class="icon4" height="200px" width="200px "src="game.png" />
         <div class="title">
             <h2>Hobbies</h2>
             <span class="text">My favorite past time consist of reading any written material physically or digitally where ever I can do so. Other than that, I also enjoy soccer, outdoor activities such as running and cycling, and games.</span>
@@ -277,19 +277,19 @@
             <h1>Get in touch</h1>
         </div>
         <div class="fb">
-            <a href="#"><img class="facebook" width="120px" height="120px" src="image/facebook.png"></a>
+            <a href="#"><img class="facebook" width="120px" height="120px" src="facebook.png"></a>
             <span class="title">Facebook</span>
         </div>
         <div class="gplus">
-            <a href="#"><img class="googleplus" width="120px" height="120px" src="image/GooglePlus256-2.png"></a>
+            <a href="#"><img class="googleplus" width="120px" height="120px" src="GooglePlus256-2.png"></a>
             <span class="title">Google+</span>
         </div>
         <div class="twitt">
-            <a href="#"><img class="twitter" width="120px" height="120px" src="image/icontexto-inside-twitter.png"></a>
+            <a href="#"><img class="twitter" width="120px" height="120px" src="icontexto-inside-twitter.png"></a>
             <span class="title">Twitter</span>
         </div>
         <div class="ctrust">
-            <a href="#"><img class="coderstrust" width="120px" height="120px" src="image/Coders_Trust_company_logo.png"></a>
+            <a href="#"><img class="coderstrust" width="120px" height="120px" src="Coders_Trust_company_logo.png"></a>
             <span class="title">CodersTrust</span>
         </div>
     </div>
