--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </div>
     </div>
     <div id="sidebar">
-        <img src="image/avatar.jpg" width="600px" height="300px"/>
+        <img src="avatar.jpg" width="600px" height="300px"/>
     </div>
     </div>
 </div>
