--- a/index.html
+++ b/index.html
@@ -5,163 +5,6 @@
     <title></title>
     <link rel="stylesheet "href="#">
     <style>
-        body {
-            background: gray;
-            margin: 0px;
-            padding: 0px;
-            font-family: Magneto;
-        }
-        .textbox {
-            width: 1200px;
-            margin: 0px auto;
-        }
-        #header {
-            background: gray;
-            overflow: hidden;
-            font-family: Magneto;
-        }
-        #top h1 {
-            text-align: center;
-            color: crimson;
-        }
-        #top h2 {
-            text-align: center;
-            color: dodgerblue;
-        }
-        #body1 {
-            background: silver;
-        }
-        #info {
-            overflow: hidden;
-            padding: 6em 0em;
-        }
-        #main {
-            float: left;
-            width: 588px;
-        }
-        #main .biodata {
-            padding-bottom: 2em;
-            text-align: left;
-        }
-        .biodata .title {
-            display: block;
-            padding-top: 0.2em;
-            font-size: 2em;            
-        }
-        .text {
-            font-family: Segoe UI Light;
-            text-align: center;
-        }
-        #sidebar {
-            float: right;
-            width: 588px;
-            
-        }
-        #body2 {
-            background: silver;
-            overflow: hidden;
-            padding: 5em 0em;
-            margin: 0px auto;
-        }
-        #favpla {
-            width: 1200px;
-            margin: 0px auto;
-        }
-        .favour {
-            text-align: center;
-        }
-        .title {
-            text-align: center;
-        }
-        .icon1 {
-            margin: 0 0 2em 3.5em;
-        }
-        .icon2 {
-            margin: 0 0 2em 3.5em;
-        }
-        .icon3 {
-            margin: 0 0 2em 3.5em;
-        }
-        .icon4 {
-            margin: 0 0 2em 3.5em;
-        }
-        .fav1, 
-        .fav2, 
-        .fav3, 
-        .fav4 {
-            width: 282px;
-            overflow: hidden;
-            
-        }
-        .fav1, 
-        .fav2 {
-            float: left;
-            margin-right: 24px;
-        }
-        .fav3 {
-            float: left;
-            margin-right: 24px;
-        }
-        .fav4 {
-            float: right;
-        }
-        #body3 {
-            background: silver;
-            overflow: hidden;
-            padding: 5em 0em;
-        }
-        #mediapla {
-            width: 1200px;
-            margin: 0px auto;
-        }
-        .media {
-            text-align: center;
-        }
-        .vid1,
-        .vid2 {
-            width: 500px;
-            height: 450px;
-            align-items: center;
-            align-content: center;
-            align-self: center;
-            text-align: center;
-        }
-        .vid1,
-        .vid2 {
-            margin-right: 75px;
-        }
-        .vid1 {
-            float: left;
-        }
-        .vid2 {
-            float: right
-        }
-        #body4 {
-            background: silver;
-            overflow: hidden;
-            padding: 5em 0em;
-        }
-        #contactpla {
-            width: 625px;
-            margin: 0px auto;
-        }
-        .contact {
-            text-align: center;
-        }
-        .fb, .gplus, .twitt, .ctrust {
-            width: 150px;
-        }
-        .fb,
-        .gplus {
-            float: left;
-            margin-right: 10px;
-        }
-        .twitt {
-            float: left;
-        }
-        .ctrust {
-            float: right;
-        }
     </style>
 </head>
 <body>
@@ -183,7 +26,7 @@
         </div>
     </div>
     <div id="sidebar">
-        <img src="avatar.jpg" width="600px" height="300px"/>
+        <img src="image/avatar.jpg" width="600px" height="300px"/>
     </div>
     </div>
 </div>
@@ -193,28 +36,28 @@
         <h1>Things I Enjoy Doing<br><br></h1>        
     </div>
     <div class="fav1">
-        <img class="icon1" height="200px" width="200px" src="android-logo-transparent-background.png" />
+        <img class="icon1" height="200px" width="200px" src="image/android-logo-transparent-background.png" />
         <div class="title">
             <h2>Android</h2>
             <span class="text">I enjoy customizing Android theme and looking to finally learn how to do it from scratch</span>
         </div>
     </div>
     <div class="fav2">
-        <img class="icon2" height="200px" width="200px" src="Coderstrust.jpg" />
+        <img class="icon2" height="200px" width="200px" src="image/Coderstrust.jpg" />
         <div class="title">
             <h2>CodersTrust</h2>
             <span class="text">This is my way to <a href="#">Learn & Earn</a> to become a successful web designer</span>
         </div>
     </div>
     <div class="fav3">
-        <img class="icon3" height="200px" width="200px" src="web.png" />
+        <img class="icon3" height="200px" width="200px" src="image/web.png" />
         <div class="title">
             <h2>Web Design</h2>
             <span class="text">I love looking at design made by professional. It makes me wonder how to create a stunning design like them. By creating and learning how to code. I can finally say that I am on my way there.</span>
         </div>
     </div>
     <div class="fav4">
-        <img class="icon4" height="200px" width="200px "src="game.png" />
+        <img class="icon4" height="200px" width="200px "src="image/game.png" />
         <div class="title">
             <h2>Hobbies</h2>
             <span class="text">My favorite past time consist of reading any written material physically or digitally where ever I can do so. Other than that, I also enjoy soccer, outdoor activities such as running and cycling, and games.</span>
@@ -277,19 +120,19 @@
             <h1>Get in touch</h1>
         </div>
         <div class="fb">
-            <a href="#"><img class="facebook" width="120px" height="120px" src="facebook.png"></a>
+            <a href="#"><img class="facebook" width="120px" height="120px" src="image/facebook.png"></a>
             <span class="title">Facebook</span>
         </div>
         <div class="gplus">
-            <a href="#"><img class="googleplus" width="120px" height="120px" src="GooglePlus256-2.png"></a>
+            <a href="#"><img class="googleplus" width="120px" height="120px" src="image/GooglePlus256-2.png"></a>
             <span class="title">Google+</span>
         </div>
         <div class="twitt">
-            <a href="#"><img class="twitter" width="120px" height="120px" src="icontexto-inside-twitter.png"></a>
+            <a href="#"><img class="twitter" width="120px" height="120px" src="image/icontexto-inside-twitter.png"></a>
             <span class="title">Twitter</span>
         </div>
         <div class="ctrust">
-            <a href="#"><img class="coderstrust" width="120px" height="120px" src="Coders_Trust_company_logo.png"></a>
+            <a href="#"><img class="coderstrust" width="120px" height="120px" src="image/Coders_Trust_company_logo.png"></a>
             <span class="title">CodersTrust</span>
         </div>
     </div>
