--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <span class="title">This is my first website. Thank you for viewing.</span>
         </div>
         <div class="biodata">
-            <p><font face="Segoe UI Light">Born in Kuala Lumpur. Growing up in Kuala Lumpur. Enjoy reading and watching anime on spare time. Dig into web designing and android development scene. Aspiring new web coder from Coderstrust.</font></p>
+            <p>Born in Kuala Lumpur. Growing up in Kuala Lumpur. Enjoy reading and watching anime on spare time. Dig into web designing and android development scene. Aspiring new web coder from Coderstrust.</p>
         </div>
     </div>
     <div id="sidebar">
-        <img src="image/avatar.jpg" width="600px" height="300px"/>
+        <img src="image/avatar.jpg" width="600px" height="300px" />
     </div>
     </div>
 </div>
