--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title></title>
-    <link rel="stylesheet "href="#">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="animate.min.css" />
     <style>
     </style>
 </head>
 <body>
-<div id="header">
-    <div id="top" class="textbox">
-        <h1><font size="10">Fadhli Nordin</font></h1>
+    <div id="Main-Block">
+<header>
+ <div id="top" class="textbox">
+        <img class="avatar" src="image/profile.jpg" />
+        <h1>Fadhli Nordin</h1>
         <h2>Kuala Lumpur , Malaysia</h2>
     </div>
-</div>
-<div id="body1">
+</header>
+<div id="body1" align="center">
     <div id="info" class="textbox">
     <div id="main">
         <div class="biotitle">
@@ -22,121 +25,48 @@
             <span class="title">This is my first website. Thank you for viewing.</span>
         </div>
         <div class="biodata">
-            <p>Born in Kuala Lumpur. Growing up in Kuala Lumpur. Enjoy reading and watching anime on spare time. Dig into web designing and android development scene. Aspiring new web coder from Coderstrust.</p>
+            <p align="center">Born in Kuala Lumpur. Growing up in Kuala Lumpur. Enjoy reading and watching anime on spare time. Dig into web designing and android development scene. Aspiring new web coder from Coderstrust.</p>
         </div>
-    </div>
-    <div id="sidebar">
-        <img src="image/avatar.jpg" width="600px" height="300px" />
     </div>
     </div>
 </div>
-<div id="body2">
+<div id="body2" align="center">
     <div id="favpla">
     <div class="favour">
-        <h1>Things I Enjoy Doing<br><br></h1>        
+        <h1 align="center">Things I Enjoy Doing<br><br></h1>        
     </div>
-    <div class="fav1">
-        <img class="icon1" height="200px" width="200px" src="image/android-logo-transparent-background.png" />
+    <div class="fav1" align="center">
+        <img class="icon" src="image/html5.png" />
         <div class="title">
-            <h2>Android</h2>
-            <span class="text">I enjoy customizing Android theme and looking to finally learn how to do it from scratch</span>
+            <h2>HTML5</h2>
+            <span class="text"><b>Hypertext Markup Language</b> revision 5 (HTML5) is markup language for the structure and presentation of World Wide Web contents. HTML5 supports the traditional HTML and XHTML-style syntax and other new features in its markup, New APIs, XHTML and error handling.</span>
         </div>
     </div>
     <div class="fav2">
-        <img class="icon2" height="200px" width="200px" src="image/Coderstrust.jpg" />
+        <img class="icon" src="image/css3.png" />
         <div class="title">
-            <h2>CodersTrust</h2>
-            <span class="text">This is my way to <a href="#">Learn & Earn</a> to become a successful web designer</span>
-        </div>
-    </div>
-    <div class="fav3">
-        <img class="icon3" height="200px" width="200px" src="image/web.png" />
-        <div class="title">
-            <h2>Web Design</h2>
-            <span class="text">I love looking at design made by professional. It makes me wonder how to create a stunning design like them. By creating and learning how to code. I can finally say that I am on my way there.</span>
-        </div>
-    </div>
-    <div class="fav4">
-        <img class="icon4" height="200px" width="200px "src="image/game.png" />
-        <div class="title">
-            <h2>Hobbies</h2>
-            <span class="text">My favorite past time consist of reading any written material physically or digitally where ever I can do so. Other than that, I also enjoy soccer, outdoor activities such as running and cycling, and games.</span>
+            <h2>CSS3</h2>
+            <span class="text"><b>CSS</b> stands for <b>Cascading Style Sheets</b>. CSS describes how HTML elements are to be displayed on screen, paper, or in other media. CSS saves a lot of work. It can control the layout of multiple web pages all at once. External stylesheets are stored in CSS files.</span>
         </div>
     </div>
 </div>
 </div>
-<div id="body3">
-    <div id="mediapla">
-        <div class="media">
-            <h1>Video and Audio</h1>
-        </div>
-        <div class="vid1">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/9bC4JRZax3s" frameborder="0" allowfullscreen></iframe>
-            <div class="title">
-                <h2>CodersTrust</h2>
-                <span class="text">Intro</span>
-            </div>
-        </div>
-        <div class="vid2">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/5GzjDBvPHpY" frameborder="0" allowfullscreen></iframe>
-            <div class="title">
-                <h2>CodersTrust</h2>
-                <span class="text">The Movie</span>
-            </div>
-        </div>
-        <div class="vid1">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/iQWN-cXBNho" frameborder="0" allowfullscreen></iframe>
-            <div class="title">
-                <h2>CodersTrust</h2>
-                <span class="text">Breaking Bad</span>
-            </div>
-        </div>
-        <div class="vid2">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/-TotL5y9TCc" frameborder="0" allowfullscreen></iframe>
-            <div class="title">
-                <h2>Upwork</h2>
-                <span class="text">Ideas Need People</span>
-            </div>
-        </div>
-        <div class="vid1">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/JdvO_eReKEY" frameborder="0" allowfullscreen></iframe>
-            <div class="title">
-                <h2>eRezeki</h2>
-                <span class="text">#YouCanDuit</span>
-            </div>
-        </div>
-        <div class="vid2">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/cKhVupvyhKk" frameborder="0" allowfullscreen></iframe>
-            <div class="title">
-                <h2>Microsoft Learning</h2>
-                <span class="text">What Is Coding</span>
-            </div>
-        </div>
-    </div>
-    </div>
-<div id="body4">
+<div id="body4" align="center">
     <div id="contactpla">
         <div class="contact">
             <h1>Get in touch</h1>
         </div>
-        <div class="fb">
-            <a href="#"><img class="facebook" width="120px" height="120px" src="image/facebook.png"></a>
-            <span class="title">Facebook</span>
-        </div>
-        <div class="gplus">
-            <a href="#"><img class="googleplus" width="120px" height="120px" src="image/GooglePlus256-2.png"></a>
-            <span class="title">Google+</span>
-        </div>
-        <div class="twitt">
-            <a href="#"><img class="twitter" width="120px" height="120px" src="image/icontexto-inside-twitter.png"></a>
-            <span class="title">Twitter</span>
-        </div>
-        <div class="ctrust">
-            <a href="#"><img class="coderstrust" width="120px" height="120px" src="image/Coders_Trust_company_logo.png"></a>
-            <span class="title">CodersTrust</span>
+        <div class="social">
+            <a class="tooltips" href="#"><span>Facebook</span><img class="morph pic" src="image/facebooks.png." /></a>      
+            <a class="tooltips" href="#"><span>Google+</span><img class="morph pic" src="image/googleplus.png" /></a>
+            <a class="tooltips" href="#"><span>Twitter</span><img class="morph pic" src="image/twitter.png" /></a>
+             <a class="tooltips" href="#"><span>LinkedIn</span><img class="morph pic" src="image/linkedin.png" /></a>
         </div>
     </div>
 </div>
-<p align="center">Copywright <u>Code Inception Agency</u>&trade; 2016</p>
+    </div>
+    <footer>
+<p class="animated pulse infinite" align="center">Copywrite <u>Fadhli Nordin</u>&trade; 2016</p>
+    </footer>
 </body>
 </html>
