--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h1>Get in touch</h1>
         </div>
         <div class="social">
-            <a class="tooltips" href="#"><span>Facebook</span><img class="morph pic" src="image/facebooks.png." /></a>      
+            <a class="tooltips" href="#"><span>Facebook</span><img class="morph pic" src="image/facebooks.png" /></a>      
             <a class="tooltips" href="#"><span>Google+</span><img class="morph pic" src="image/googleplus.png" /></a>
             <a class="tooltips" href="#"><span>Twitter</span><img class="morph pic" src="image/twitter.png" /></a>
              <a class="tooltips" href="#"><span>LinkedIn</span><img class="morph pic" src="image/linkedin.png" /></a>
