--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </div>
     </div>
     <footer>
-<p class="animated pulse infinite" align="center">Copywrite <u>Fadhli Nordin</u>&trade; 2016</p>
+<p class="animated pulse infinite" align="center">Copyright <u>Fadhli Nordin</u>&trade; 2016</p>
     </footer>
 </body>
 </html>
